Project folder structure edited for build pipeline

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My First Progressive Webapp</title>
     <link rel="manifest" href="./manifest.json">
-    <link rel="stylesheet" href=".css/dist/style.css">
+    <link rel="stylesheet" href=".css/style.css">
 </head>
 <body>
 <h1>My First Progressive Webapp</h1>
@@ -38,6 +38,6 @@
 
     </div>
 </section>
-<script type="module" src="./js/dist/pwa.js"></script>
+<script type="module" src="./js/pwa.js"></script>
 </body>
 </html>
