--- a/app/index.html
+++ b/app/index.html
@@ -4,40 +4,12 @@
     <meta charset="UTF-8">
     <title>My First Progressive Webapp</title>
     <link rel="manifest" href="./manifest.json">
-    <link rel="stylesheet" href=".css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-<h1>My First Progressive Webapp</h1>
-<section id="login">
-    <span id="login_state" class="red"></span>
-    <span id="user_display_name"></span>
-    <form action="" id="frm_login">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Josef Altmann">
-        <label for="password">Passort</label>
-        <input type="password" id="password">
-        <button id="btn_login">Einloggen</button>
-        <button id="btn_logout">Ausloggen</button>
-    </form>
-    <button id="btn_fetch_cloths">Fetch Cloths</button>
-</section>
-<section id="input">
-    <form id="submit_post_form" class="hidden" action="">
-        <label for="post_title">Titel</label>
-        <input type="text" id="post_title">
-        <label for="post_text">Text</label>
-        <input type="text" id="post_text">
-        <label for="post_content"></label>
-        <input type="text" id="post_content">
-        <button id="submit_post">Submit</button>
-    </form>
-</section>
-<section id="resources">
-    <h2>Posts</h2>
-    <div id="posts" class="resource">
+<section id="kwmJS">
 
-    </div>
 </section>
-<script type="module" src="./js/pwa.min.js"></script>
+<script type="module" src="./js/pwa.js"></script>
 </body>
 </html>
