--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <title>My First Progressive Webapp</title>
     <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/bootstrap.litera.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-<section id="kwmJS">
+<h1></h1>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="border p-2 col col-lg-8 col-md-12 col-sm-12">
+            <section id="kwmJS" class="p-3">
+                <!-- Here goes the app -->
+            </section>
+        </div>
+    </div>
+</div>
 
-</section>
 <script type="module" src="./js/pwa.js"></script>
 </body>
 </html>
