--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>My First Progressive Webapp</title>
+    <meta lang="en">
+    <title>Webapp Multi</title>
     <link rel="manifest" href="./manifest.json">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black">
+    <meta name="description" content="Ignite cultural exchange.">
+    <meta name="keywords" content="Interculturality Multicultural Exchange Learning Languages">
+    <link rel="apple-touch-icon" href="./images/icons/icon-192x192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/bootstrap.litera.css">
+    <link rel="stylesheet" href="./css/bootstrap.quartz.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
@@ -13,13 +22,13 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="border p-2 col col-lg-8 col-md-12 col-sm-12">
-            <section id="kwmJS" class="p-3">
+            <section id="kwmJS" class="py-3">
                 <!-- Here goes the app -->
             </section>
         </div>
     </div>
 </div>
 
-<script type="module" src="./js/pwa.js"></script>
+<script async type="module" src="./js/pwa.js"></script>
 </body>
 </html>
