Added spinner and edited menu layout

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
 <h1></h1>
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="border p-2 col col-lg-8 col-md-12 col-sm-12">
-            <section id="kwmJS" class="py-3">
+        <div class="border rounded p-2 col col-lg-8 col-md-12 col-sm-12">
+            <section id="kwmJS" class="">
                 <!-- Here goes the app -->
             </section>
         </div>
