--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--meta name="lang" content="en"-->
     <meta http-equiv="language" content="en">
     <link rel="alternate" hreflang="de" href="https://app.s2010456022.student.kwmhgb.at/#/home?lang=de"/>
     <link rel="alternate" hreflang="en" href="https://app.s2010456022.student.kwmhgb.at/#/home?lang=en"/>
@@ -22,11 +21,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/bootstrap.quartz.css">
-    <link rel="stylesheet" href="./css/main.min.css">
+    <!--link rel="stylesheet" href="./css/menu.mobile.css"-->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 <h1 class="visually-hidden">Webapp Multi</h1>
-<div class="container-fluid">
+<div class="container-fluid main__container">
     <div style="min-height: 100vh" class="row justify-content-center p-0">
         <div class="border rounded p-0 pb-1 px-1 p-md-2 mt-0 my-lg-2 col col-xl-6 col-lg-8 col-md-12 col-sm-12">
             <section id="kwmJS" class="">
